<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.addPaper.AddPaperFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/doubleBasePadding">


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_add_paper_share_paper_title"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/doubleBaseMargin"
                    android:layout_marginBottom="32dp">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/add_paper_doi_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/fragment_add_paper_paper_doi_caption"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                        android:layout_width="wrap_content"
                        android:id="@+id/add_paper_button_search_paper"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_black_24dp"
                        android:layout_gravity="center"
                        android:background="?selectableItemBackgroundBorderless"
                        android:tint="@drawable/standard_clickable_icon_selector"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/add_paper_fields_layout_container"
                    android:visibility="gone">

            </LinearLayout>

            <EditText
                    android:id="@+id/add_paper_sharing_comment_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:hint="@string/fragment_add_paper_sharing_comment_caption"
                    android:inputType="textLongMessage"
                    android:visibility="gone"/>

            <include layout="@layout/undetermined_progress_bar"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_paper_buttons_layout"
                    android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_paper_share_paper_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_add_paper_share_button_caption"
                        android:layout_alignParentStart="true"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_paper_share_cancel_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_paper_cancel_button_caption"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>