<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.paperdetail.PaperDetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <include layout="@layout/undetermined_progress_bar"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/paper_detail_nested_scrollview"
                android:paddingStart="@dimen/doubleBasePadding"
                android:paddingEnd="@dimen/doubleBaseMargin">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/content_layout"
                    android:visibility="gone">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/paper_title"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/baseMargin"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/paper_date"/>

                    <include layout="@layout/dash_separator_layout"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/paper_topics"/>
                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/paper_doi"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/paper_citations"/>

                <TextView
                        android:layout_marginTop="@dimen/baseMargin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/paper_authors"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                <androidx.cardview.widget.CardView
                        android:layout_marginTop="@dimen/doubleBaseMargin"
                        app:cardCornerRadius="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.smarteist.autoimageslider.SliderView
                            android:id="@+id/imageSlider"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            app:sliderAnimationDuration="600"
                            app:sliderAutoCycleDirection="back_and_forth"
                            app:sliderCircularHandlerEnabled="true"
                            app:sliderIndicatorGravity="center_horizontal|bottom"
                            app:sliderIndicatorMargin="15dp"
                            app:sliderIndicatorOrientation="horizontal"
                            app:sliderIndicatorPadding="3dp"
                            app:sliderIndicatorRadius="2dp"
                            app:sliderIndicatorSelectedColor="#5A5A5A"
                            app:sliderIndicatorUnselectedColor="#FFF"
                            app:sliderScrollTimeInSec="1"/>
                </androidx.cardview.widget.CardView>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/doubleBaseMargin"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                <TextView
                        android:layout_width="match_parent"
                        android:justificationMode="inter_word"
                        android:id="@+id/paper_abstract"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/doubleBaseMargin"
                        android:layout_height="wrap_content"
                        android:text="@string/paper_detail_btn_go_to_source"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/paper_publisher"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <!-- Separator line -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dark_gray"
                        android:layout_marginTop="@dimen/doubleBaseMargin"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/paper_detail_comments_caption"
                        android:layout_marginBottom="32dp"
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_height="wrap_content"/>


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_paper_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- Dummy layout for preventing the edit text from gaining focus automatically -->
        <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/doubleBasePadding"
                android:paddingEnd="@dimen/doubleBasePadding">

            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/paper_detail_comment_tf"
                    android:hint="@string/write_comment_hint"
                    android:focusedByDefault="false"
                    android:paddingEnd="60dp"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/button_send_commment"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_send_24px"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackgroundBorderless"
                    android:tint="@drawable/standard_clickable_icon_selector"
                    android:layout_marginEnd="@dimen/baseMargin"
                    android:layout_marginStart="-60dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>